Switch from webpack to rollup

--- a/public/global.css
+++ b/public/global.css
@@ -48,11 +48,16 @@ input[type="range"] {
 }
 
 button {
+	color: #333;
 	background-color: #f4f4f4;
 	outline: none;
 }
 
-button:active {
+button:disabled {
+	color: #999;
+}
+
+button:not(:disabled):active {
 	background-color: #ddd;
 }
 
