--- a/static/global.css
+++ b/static/global.css
@@ -1,11 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap');
+@font-face {
+    font-family: 'JetMono';
+    src: local("JetBrains Mono");
+    src: url("fonts/JetBrainsMono-Regular.eot") format("embedded-opentype");
+    src: url("fonts/JetBrainsMono-Regular.woff") format("woff");
+    src: url("fonts/JetBrainsMono-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+}
+
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 .mono {
-    font-family: 'JetBrains Mono', sans-serif;
+    font-family: 'JetMono', sans-serif;
 }
 
 h2 {
