--- a/static/global.css
+++ b/static/global.css
@@ -228,7 +228,7 @@
 
 
 body {
-    font-family: 'Playfair Display', serif;
+    font-family: 'JetMono', serif;
     padding-bottom: 5rem !important;
 }
 
