--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,3 +91,23 @@
   src: local('IBM Plex Serif Text'), local('IBMPlexSerif-Text'), url('https://valentinrogg.de/assets/IBMPlexSerif-Text.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: local("JetBrains Mono");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Regular.eot") format("embedded-opentype");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Regular.woff") format("woff");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.container {
+  margin: auto;
+  max-width: 960px;
+}
+
+.mono {
+  font-family: 'JetBrains Mono', sans-serif;
+  font-weight: 400;
+}
