--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -42,3 +42,15 @@ $font-size-h4: 1.125rem;
 $font-size-big: 1.125rem;
 $font-size-normal: 1rem;
 $font-size-small: .875rem;
+
+$font-family-sans: "IBM Plex Sans", sans-serif;
+$font-family-serif: "IBM Plex Serif", serif;
+
+$font-weight-thin: 100;
+$font-weight-extra-light: 200;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-text: 450;
+$font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
