--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -27,7 +27,7 @@ $red: #ff0000;
 $yellow: #C7C700;
 $magenta: #BF0080;
 //$blue: #008080;
-$green: #00FF80;
+$anothergreen: #00FF80;
 $anotherblue: #00708F;
 $purple: #CC00CC;
 $darkyellow: #707000;
