--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -107,7 +107,7 @@
   margin: 0 auto;
   position: relative;
   z-index: 1070;
-  /*padding: 0 1rem;*/
+  padding: 0 1rem;
 }
 
 @media (min-width: 1200px) {
