--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -99,11 +99,13 @@
   src: url("https://valentinrogg.de/assets/JetBrainsMono-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap
 }
 
 
 .container {
   max-width: 940px;
+  min-width: 940px;
   margin: 0 auto;
   position: relative;
   z-index: 1070;
@@ -113,24 +115,28 @@
 @media (min-width: 1200px) {
   .container {
     max-width: 940px;
+    min-width: 940px;
   }
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .container {
     max-width: 940px;
+    min-width: 940px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
   .container {
     max-width: 720px;
+    min-width: 720px;
   }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
   .container {
     max-width: 540px;
+    min-width: 540px;
   }
 }
 
@@ -145,13 +151,29 @@ html {
 }
 
 body {
+  max-width: max-content;
   transform-style: preserve-3d;
   transform: perspective(1000px);
+  margin: auto;
+  padding: 3rem;
+  //display: flex;
+  //align-self: center;
+  //justify-self: center;
 }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
+}
+
+h1, h2, h3, h4, h5 {
+  //text-shadow:  0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+  text-shadow:  0 1px 2px rgba(0, 0, 0, 0.05);
+
+}
+
+section {
+  margin: 3rem 0;
 }
 
 a {
