--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -169,7 +169,10 @@ h1, h2, h3, h4, h5, h6, p {
 h1, h2, h3, h4, h5 {
   //text-shadow:  0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
   text-shadow:  0 1px 2px rgba(0, 0, 0, 0.05);
+}
 
+p {
+  font-weight: 450;
 }
 
 section {
