--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -102,6 +102,18 @@
   font-display: swap
 }
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: local("JetBrains Mono");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.eot") format("embedded-opentype");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.woff") format("woff");
+  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap
+}
+
+
 
 .container {
   max-width: 940px;
