--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -102,18 +102,6 @@
   font-display: swap
 }
 
-@font-face {
-  font-family: 'JetBrains Mono';
-  src: local("JetBrains Mono");
-  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.eot") format("embedded-opentype");
-  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.woff") format("woff");
-  src: url("https://valentinrogg.de/assets/JetBrainsMono-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap
-}
-
-
 
 .container {
   max-width: 940px;
@@ -159,7 +147,7 @@ html {
 }
 
 body {
-  max-width: max-content;
+  //max-width: max-content;
   transform-style: preserve-3d;
   transform: perspective(1000px);
   margin: auto;
@@ -167,6 +155,7 @@ body {
   //display: flex;
   //align-self: center;
   //justify-self: center;
+  //width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -177,10 +166,6 @@ h1, h2, h3, h4, h5, h6, p {
 h1, h2, h3, h4, h5 {
   //text-shadow:  0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
   //text-shadow:  0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-p {
-  font-weight: 450;
 }
 
 section {
