--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -54,3 +54,8 @@ $font-weight-text: 450;
 $font-weight-medium: 500;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
+
+p {
+  font-family: $font-family-serif;
+  font-weight: 450;
+}
