Fix projects navigation Add navigation to projects layout

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -33,6 +33,8 @@ $purple: #CC00CC;
 $darkyellow: #707000;
 $green: #C7C700;
 $darkgrey: #0F1418;
+$skin: #4f4948;
+$lightskin: lighten($skin, 15);
 
 $font-size-h1: 2.5rem;
 $font-size-h2: 1.5rem;
