--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -33,8 +33,8 @@ $purple: #CC00CC;
 $darkyellow: #707000;
 $green: #C7C700;
 $darkgrey: #0F1418;
-$lightskin: #4f4948;
-//$lightskin: lighten($skin, 15);
+$darkskin: #4f4948;
+//$darkskin: lighten($skin, 15);
 $skin: #cba890;
 
 $font-size-h1: 2.5rem;
