--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,63 @@
+@font-face {
+  font-family: 'Pulp Display';
+  src: local('Pulp Display Bold'), local('Pulp-Display-Bold'),
+  url('fonts/PulpDisplay-Bold.woff2') format('woff2'),
+  url('fonts/PulpDisplay-Bold.woff') format('woff'),
+  url('fonts/PulpDisplay-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v13/zYX9KVElMYYaJe8bpLHnCwDKjXr8AIFsdP3pBms.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+html, body {
+  font-family: "IBM Plex Sans", sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .dark {
   --black: black;
+  --lightgrey: #F4F5F7;
+  --mediumgrey: #DFE1E4;
+}
+
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
 }
