--- a/src/app.css
+++ b/src/app.css
@@ -1,98 +1,63 @@
-@import '@fontsource/fira-mono';
-
-:root {
-  font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
-  --font-mono: 'Fira Mono', monospace;
-  --pure-white: #ffffff;
-  --primary-color: #b9c6d2;
-  --secondary-color: #d0dde9;
-  --tertiary-color: #edf0f8;
-  --accent-color: #ff3e00;
-  --heading-color: rgba(0, 0, 0, 0.7);
-  --text-color: #444444;
-  --background-without-opacity: rgba(255, 255, 255, 0.7);
-  --column-width: 42rem;
-  --column-margin-top: 4rem;
+@font-face {
+  font-family: 'Pulp Display';
+  src: local('Pulp Display Bold'), local('Pulp-Display-Bold'),
+  url('fonts/PulpDisplay-Bold.woff2') format('woff2'),
+  url('fonts/PulpDisplay-Bold.woff') format('woff'),
+  url('fonts/PulpDisplay-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 
-body {
-  min-height: 100vh;
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v13/zYX9KVElMYYaJe8bpLHnCwDKjXr8AIFsdP3pBms.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+html, body {
+  font-family: "IBM Plex Sans", sans-serif;
+  height: 100%;
   margin: 0;
-  background-color: var(--primary-color);
-  background: linear-gradient(180deg, var(--primary-color) 0%, var(--secondary-color) 10.45%, var(--tertiary-color) 41.35%);
+  padding: 0;
 }
 
-body::before {
-  content: '';
-  width: 80vw;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 10vw;
-  z-index: -1;
-  background: radial-gradient(50% 50% at 50% 50%, var(--pure-white) 0%, rgba(255, 255, 255, 0) 100%);
-  opacity: 0.05;
+.dark {
+  --black: black;
+  --lightgrey: #F4F5F7;
+  --mediumgrey: #DFE1E4;
 }
 
-#svelte {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-h1,
-h2,
-p {
-  font-weight: 400;
-  color: var(--heading-color);
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
 }
-
-p {
-  line-height: 1.5;
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
 }
-
-a {
-  color: var(--accent-color);
-  text-decoration: none;
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
 }
-
-a:hover {
-  text-decoration: underline;
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
 }
-
-h1 {
-  font-size: 2rem;
-  text-align: center;
-}
-
-h2 {
-  font-size: 1rem;
-}
-
-pre {
-  font-size: 16px;
-  font-family: var(--font-mono);
-  background-color: rgba(255, 255, 255, 0.45);
-  border-radius: 3px;
-  box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-  padding: 0.5em;
-  overflow-x: auto;
-  color: var(--text-color);
-}
-
-input,
-button {
-  font-size: inherit;
-  font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-  outline: none;
-}
-
-@media (min-width: 720px) {
-  h1 {
-    font-size: 2.4rem;
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
   }
 }
