--- a/src/app.css
+++ b/src/app.css
@@ -1,33 +1,61 @@
 @font-face {
-  font-family: 'Pulp Display';
-  src: local('Pulp Display Bold'), local('Pulp-Display-Bold'),
-  url('fonts/PulpDisplay-Bold.woff2') format('woff2'),
-  url('fonts/PulpDisplay-Bold.woff') format('woff'),
-  url('fonts/PulpDisplay-Bold.ttf') format('truetype');
+  font-family: "Pulp Display";
+  src: local("Pulp Display Bold"), local("Pulp-Display-Bold"), url("fonts/PulpDisplay-Bold.woff2") format("woff2"),
+    url("fonts/PulpDisplay-Bold.woff") format("woff"), url("fonts/PulpDisplay-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'IBM Plex Sans';
+  font-family: "IBM Plex Sans";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/ibmplexsans/v13/zYX9KVElMYYaJe8bpLHnCwDKjXr8AIFsdP3pBms.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v13/zYX9KVElMYYaJe8bpLHnCwDKjXr8AIFsdP3pBms.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-html, body {
+:root {
+  --c-green: #93c700;
+  --c-blue: #18a0fb;
+  --c-red: #ff0000;
+
+  --r-black: #0f1418;
+  --r-grey-90: #282c31;
+  --r-grey-70: #4e5256;
+  --r-grey-50: #727577;
+  --r-grey-30: #dfe1e4;
+  --r-grey-10: #f4f5f7;
+  --r-white: #ffffff;
+}
+
+.light {
+  --c-black: var(--r-black);
+  --c-grey-90: var(--r-grey-90);
+  --c-grey-70: var(--r-grey-70);
+  --c-grey-50: var(--r-grey-50);
+  --c-grey-30: var(--r-grey-30);
+  --c-grey-10: var(--r-grey-10);
+  --c-white: var(--r-white);
+}
+
+.dark {
+  --c-black: var(--r-white);
+  --c-grey-90: var(--r-grey-10);
+  --c-grey-70: var(--r-grey-30);
+  --c-grey-50: var(--r-grey-50);
+  --c-grey-30: var(--r-grey-70);
+  --c-grey-10: var(--r-grey-90);
+  --c-white: var(--r-black);
+}
+
+html,
+body {
   font-family: "IBM Plex Sans", sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-.dark {
-  --black: black;
-  --lightgrey: #F4F5F7;
-  --mediumgrey: #DFE1E4;
 }
 
 .container {
