--- a/src/app.css
+++ b/src/app.css
@@ -1,22 +1,21 @@
 @font-face {
-  font-family: "Pulp Display";
+  font-family: "Display";
   src:
-    url('fonts/PD-Bold.woff2') format('woff2'),
-    url('fonts/PD-Bold.woff') format('woff');
+    url(fonts/abc.woff2) format('woff2');
   font-weight: 700;
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Obacht Display';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src:
-    url(https://valentinrogg.de/fonts/pulp_display_regular.woff2) format('woff2'),
-    url(https://valentinrogg.de/fonts/pulp_display_regular.woff) format('woff');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+/*@font-face {*/
+/*  font-family: 'Obacht Display';*/
+/*  font-style: normal;*/
+/*  font-weight: 400;*/
+/*  font-display: swap;*/
+/*  src:*/
+/*    url(https://valentinrogg.de/fonts/pulp_display_regular.woff2) format('woff2'),*/
+/*    url(https://valentinrogg.de/fonts/pulp_display_regular.woff) format('woff');*/
+/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
+/*}*/
 
 @font-face {
   font-family: "IBM Plex Sans";
