Add image version

--- a/src/app.css
+++ b/src/app.css
@@ -73,7 +73,7 @@ body {
   margin: 0;
   padding: 0;
   color: var(--c-black);
-  background: var(--c-off-white);
+  background: var(--c-white);
   width: 100vw;
   height: calc(100vh - 8rem);
 }
