--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,28 @@
 }
 
 @font-face {
+  font-family: "Display";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Medium.woff2) format("woff2"),
+  url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Medium.woff) format("woff");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+  U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Display";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Regular.woff2) format("woff2"),
+  url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Regular.woff) format("woff");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+  U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
   font-family: "IBM Plex Sans";
   font-style: normal;
   font-weight: 300;
@@ -75,7 +97,9 @@ body {
   color: var(--c-black);
   background: var(--c-white);
   width: 100vw;
-  height: calc(100vh - 8rem);
+  /*height: calc(100vh - 8rem);*/
+  min-height: 100vh;
+  /*overflow: hidden;*/
 }
 
 a {
@@ -89,11 +113,6 @@ a.disabled {
 
 button {
   color: var(--c-black);
-}
-
-.overlay {
-  position: relative;
-  z-index: 200;
 }
 
 .container {
