--- a/static/app.css
+++ b/static/app.css
@@ -135,7 +135,7 @@ body {
   width: 100vw;
   /*height: calc(100vh - 8rem);*/
   min-height: 100vh;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 a {
@@ -164,6 +164,10 @@ button {
   width: 100%;
   height: 2px;
   background: #0f1418;
+}
+
+.top-padding {
+  margin-top: 160px;
 }
 
 .container {
