--- a/static/app.css
+++ b/static/app.css
@@ -132,10 +132,10 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  /*width: 100vw;*/
   /*height: calc(100vh - 8rem);*/
   min-height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 a {
@@ -178,32 +178,32 @@ button {
 
 @media (max-width: 575.98px) {
   .container {
-    max-width: 320px;
+    max-width: 260px;
   }
 }
 
 @media (min-width: 576px) {
   .container {
-    max-width: 540px;
+    max-width: 500px;
   }
 }
 @media (min-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: 680px;
   }
 }
 @media (min-width: 992px) {
   .container {
-    max-width: 960px;
+    max-width: 900px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 1100px;
   }
 }
 @media (min-width: 1400px) {
   .container {
-    max-width: 1320px;
+    max-width: 1300px;
   }
 }
