--- a/static/fonts.css
+++ b/static/fonts.css
@@ -49,7 +49,7 @@
 }
 
 @font-face {
-	font-family: "Caveat";
+	font-family: "Two Caveat";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
