--- a/static/fonts.css
+++ b/static/fonts.css
@@ -4,7 +4,7 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		local('Inter Regular'),
+		/*local('Inter Regular'),*/
 		url('https://static.valentinrogg.de/fonts_Inter-Regular.ttf') format('truetype');
 }
 
@@ -14,7 +14,7 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		local('Inter Semibold'),
+		/*local('Inter Semibold'),*/
 		url('https://static.valentinrogg.de/fonts_Inter-SemiBold.ttf') format('truetype');
 }
 
@@ -24,7 +24,7 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		local('Candid Book'),
+		/*local('Candid Book'),*/
 		url('https://static.valentinrogg.de/fonts_Candid-Book.otf') format('opentype');
 }
 
@@ -34,7 +34,7 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		local('Candid SemiBold'),
+		/*local('Candid SemiBold'),*/
 		url('https://static.valentinrogg.de/fonts_Candid-SemiBold.otf') format('opentype');
 }
 
@@ -44,7 +44,7 @@
 	font-weight: 700;
 	font-display: swap;
 	src:
-		local('Candid Bold'),
+		/*local('Candid Bold'),*/
 		url('https://static.valentinrogg.de/fonts_Candid-Bold.otf') format('opentype');
 }
 
@@ -54,7 +54,7 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		local('Caveat'),
+		/*local('Caveat'),*/
 		url('https://static.valentinrogg.de/fonts_Caveat-Medium.ttf') format('truetype');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 	U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
