--- a/static/fonts.css
+++ b/static/fonts.css
@@ -5,8 +5,8 @@
 	font-display: swap;
 	src:
 		local('Inter Regular'),
-		url('https://static.valentinrogg.de/fonts_Inter-Regular.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Inter-Regular.ttf') format('truetype');
+		url('https://personal-minio.fly.dev/fonts/Inter-Regular.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
@@ -16,8 +16,8 @@
 	font-display: swap;
 	src:
 		local('Inter Semibold'),
-		url('https://static.valentinrogg.de/fonts_Inter-SemiBold.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Inter-SemiBold.ttf') format('truetype');
+		url('https://personal-minio.fly.dev/fonts/Inter-SemiBold.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Inter-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
@@ -27,8 +27,8 @@
 	font-display: swap;
 	src:
 		local('Candid Book'),
-		url('https://static.valentinrogg.de/fonts_Candid-Book.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Candid-Book.otf') format('opentype');
+		url('https://personal-minio.fly.dev/fonts/Candid-Book.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Candid-Book.otf') format('opentype');
 }
 
 @font-face {
@@ -38,8 +38,8 @@
 	font-display: swap;
 	src:
 		local('Candid SemiBold'),
-		url('https://static.valentinrogg.de/fonts_Candid-SemiBold.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Candid-SemiBold.otf') format('opentype');
+		url('https://personal-minio.fly.dev/fonts/Candid-SemiBold.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Candid-SemiBold.otf') format('opentype');
 }
 
 @font-face {
@@ -49,8 +49,8 @@
 	font-display: swap;
 	src:
 		local('Candid Bold'),
-		url('https://static.valentinrogg.de/fonts_Candid-Bold.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Candid-Bold.otf') format('opentype');
+		url('https://personal-minio.fly.dev/fonts/Candid-Bold.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Candid-Bold.otf') format('opentype');
 }
 
 @font-face {
@@ -60,8 +60,8 @@
 	font-display: swap;
 	src:
 		local('Caveat'),
-		url('https://static.valentinrogg.de/fonts_Caveat-Medium.woff2') format('woff2'),
-		url('https://static.valentinrogg.de/fonts_Caveat-Medium.ttf') format('truetype');
+		url('https://personal-minio.fly.dev/fonts/Caveat-Medium.woff2') format('woff2'),
+		url('https://personal-minio.fly.dev/fonts/Caveat-Medium.ttf') format('truetype');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 	U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
