Update toml files

--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@
   --fs-08: .875rem;
 
   --ff-sans: "Two Inter", sans-serif;
-  --ff-handwriting: "Two Caveat", sans-serif;
+  --ff-handwriting: "Caveat", sans-serif;
   --ff-display: "Two Candid", sans-serif;
 }
 
