--- a/static/fonts.css
+++ b/static/fonts.css
@@ -54,7 +54,7 @@
 }
 
 @font-face {
-	font-family: "Two Caveat";
+	font-family: "Caveat";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
