Fix admin panel

--- a/src/app.scss
+++ b/src/app.scss
@@ -71,10 +71,9 @@
 
 html,
 body {
-  // ignore invalid argument
-  --white-500: theme(colors.white.500);
-  --white-700: theme(colors.white.700);
-  --skin-500: theme(colors.skin.500);
+  --white-500: theme('colors.white.500');
+  --white-700: theme('colors.white.700');
+  --skin-500: theme('colors.skin.500');
   font-family: var(--ff-sans);
   margin: 0;
   padding: 0;
@@ -84,8 +83,8 @@ body {
 }
 
 html.dark, body.dark {
-  --blue-900: theme(colors.blue.900);
-  --blue-700: theme(colors.blue.700);
+  --blue-900: theme('colors.blue.900');
+  --blue-700: theme('colors.blue.700');
   scrollbar-color: var(--blue-700) var(--blue-900);
 }
 
